<resources>
    <string name="app_name">ShopList</string>
    <string name="add">add</string>
    <string name="remove">remove</string>
    <string name="delete">delete</string>
    <string name="add_item_to_list">Add item to list</string>
    <string name="cancel">cancel</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>